--- a/untitled/mainwindow.ui
+++ b/untitled/mainwindow.ui
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Destructive Stage V1.0</string>
+   <string/>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="styleSheet">
